# traction_control

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
ai-emulation/: data_analysis.ipynb  test_model.ipynb  train_model.py
ai-emulation/datasets/: simulation_data_cleaned2.csv  simulation_data_test.csv
ai-emulation/modules/: MLPClass.py  training_tools.py
ai-emulation/traction_control_model/: CMakeLists.txt  mlp_model_traced.pt
ai-emulation/traction_control_model/include/: Simulation.h  TractionControl.h  Visualizer.h
ai-emulation/traction_control_model/src/: Simulation.cpp  TractionControl.cpp  Vehicle.cpp  Visualizer.cpp  main.cpp
emulation/: CMakeLists.txt
emulation/include/: Vehicle.h  Visualizer.h
emulation/src/: data_generator.cpp  main.cpp
include/: TractionControl.h  Vehicle.h
src/: Simulation.cpp  TractionControl.cpp  Vehicle.cpp  Visualizer.cpp
